get request added but with an error
